Make a start at jsdoc

--- a/src/templates/js.templ
+++ b/src/templates/js.templ
@@ -87,7 +87,7 @@ utils.convRuntimeReturn(@includeNamed{templ})
 @declare{'genMethod'}
 	@if{static == method.staticMethod}
 		@if{method.comment != null}
-@{helper.indentString("/*\n" + method.comment + "*/\n", ind)}
+@{helper.indentString("/*\n" + helper.removeTags(method.comment) + "\n*/\n", ind)}
 		@end{}
 @{ind}@if{static}@{ifaceSimpleName}@else{}this@end{}.@{method.name} = function(@foreach{param0: method.params}@{param0.name}@end{", "}) {\n
 		@if{method.squashed}
@@ -140,6 +140,22 @@ utils.convRuntimeReturn(@includeNamed{templ})
 @comment{"This is where the generation starts"}
 @comment{"==================================="}
 
+/*\n
+ * Copyright 2014 Red Hat, Inc.\n
+ *\n
+ * Red Hat licenses this file to you under the Apache License, version 2.0\n
+ * (the "License"); you may not use this file except in compliance with the\n
+ * License.  You may obtain a copy of the License at:\n
+ *\n
+ * http://www.apache.org/licenses/LICENSE-2.0\n
+ *\n
+ * Unless required by applicable law or agreed to in writing, software\n
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT\n
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the\n
+ * License for the specific language governing permissions and limitations\n
+ * under the License.\n
+ */\n\n
+
 @comment{"Generate the requires"}
 
 var utils = require('vertx/util/utils');\n
@@ -162,11 +178,12 @@ var @{helper.getSimpleName(optionType)} = @{optionType};\n
 
 @comment{"The main comment"}
 
+/**\n
 @if{ifaceComment != null}
-/*\n
-@{ifaceComment}
-*/\n
+@{helper.removeTags(ifaceComment)}\n
 @end{}
+  @class\n
+*/\n
 
 @comment{"The constructor"}
 
