--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -165,7 +165,7 @@ utils.convRuntimeReturn(@includeNamed{templ})
 var utils = require('vertx-js/util/utils');\n
 @foreach{referencedType : referencedTypes}
 @code{refedType=helper.getSimpleName(helper.getNonGenericType(referencedType));}
-var @{refedType} = require('vertx-js/@{helper.convertCamelCaseToUnderscores(refedType)}');\n
+var @{refedType} = require('@{java.lang.System.getProperty("vertx-js.scriptDir")}/@{helper.convertCamelCaseToUnderscores(refedType)}');\n
 @end{}
 \n
 
