--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -14,7 +14,7 @@
 
 @declare{'convParam'}
 	@if{param.type.name.startsWith('io.vertx.core.Handler<')}
-		@code{genericType = helper.getGenericType(param.type)}
+		@code{genericType = helper.getGenericType(param.type.name)}
 		@if{genericType.startsWith('io.vertx.core.AsyncResult<')}
 			@code{genericType = helper.getGenericType(genericType)}
 			@if{genericType.equals('java.lang.Void')}
@@ -41,15 +41,15 @@ function(jVal) {\n
 @{ind}    @{param.name}(@includeNamed{'convReturn'; templ='basicVal'; returnType=genericType});\n
 @{ind}  }
 		@end{}
-	@else{param.type.equals('io.vertx.core.json.JsonObject')}
+	@else{param.type.name.equals('io.vertx.core.json.JsonObject')}
 utils.convJSObjectToJsonObject(@{param.name})
-	@else{param.type.equals('io.vertx.core.json.JsonArray')}
+	@else{param.type.name.equals('io.vertx.core.json.JsonArray')}
 utils.convJSArrayToJsonArray(@{param.name})
 	@else{param.options}
-new @{helper.getSimpleName(param.type)}(new JsonObject(JSON.stringify(@{param.name})))
-	@else{param.type.equals('java.lang.Object')}
+new @{helper.getSimpleName(param.type.name)}(new JsonObject(JSON.stringify(@{param.name})))
+	@else{param.type.name.equals('java.lang.Object')}
 utils.convRuntimeParam(@{param.name})
-	@else{helper.isBasicType(param.type)}
+	@else{helper.isBasicType(param.type.name)}
 @{param.name}
 	@else{}
 @{param.name}._jdel()
