--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -47,7 +47,7 @@ utils.convJSObjectToJsonObject(@{param.name})
 utils.convJSArrayToJsonArray(@{param.name})
 	@else{param.options}
 @{helper.getSimpleName(param.type.name)}.optionsFromJson(new JsonObject(JSON.stringify(@{param.name})))
-	@else{param.type.kind == OBJECT}
+	@else{param.type.kind == CLASS_OBJECT}
 utils.convRuntimeParam(@{param.name})
 	@else{helper.isBasicType(param.type.name)}
 @{param.name}
