--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -90,7 +90,7 @@ utils.convSet(@includeNamed{templ})
 utils.convJsonToJS(@includeNamed{templ})
 	@else{helper.isBasicType(returnType)}
 @includeNamed{templ}
-	@else{helper.isVertxGenType(returnType)}
+	@else{method.returnType.kind == CLASS_API}
 new @{helper.getSimpleName(helper.getNonGenericType(returnType))}(@includeNamed{templ})
 	@else{}
 	@comment{'This will probably happen if the return type is generic'}
